# Reusable-email

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
docs/: requirements.txt
docs/source/: Readme.md  api-usage.rst  api.rst  conf.py  index.rst  package-usage.rst  package.rst  python-usage.rst  python.rst  usage.rst
docs/source/_static/: dark_mode.css
docs/source/package/: Untitled-1.txt  async.rst  sync.rst
docs/source/reusable/email/: __init__.py  error.py
email/: inbox_manager.py  types.py
reusable/email/: __init__.py  crypto.py  error.py  errors.py  inbox_manager.py  types.py
src/reusable/email/: crypto.py  errors.py
