[build-system]
requires = [
  # "setuptools", 
  # "wheel",
  "flit_core",
  'cryptography',
  'requests',
  'aiohttp',
  'typing_extensions'
  ]

build-backend = "setuptools.build_meta"

[project]
name = "Reusable-email"
authors = [{name = "Carter2565", email = "Carter@carter2565.dev"},{name = "Jam"}]
dynamic = ["version", "description"]
